# AA-CMake-Clang

AssetsApplication-CMake-Clang/: CMakeLists.txt  README.md  Setup.sh
AssetsApplication-CMake-Clang/Sources/Assets/: Logo.c
Sources/Assets/: Logo.c
